[package]
name = "state-tracker"
version = "0.1.0"
edition = "2021"
description = "Tracking utility for tasks' states"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1", features = ["full"]}
futures = "0.3"

log = "0.4"

serde = {version = "1", features = ["derive"]}
serde_json = "1"

[dev-dependencies]
simple_logger = "4"